# IMU_CV_Fusion

./: README.md
CV_imu_data/: CMakeLists.txt  acc_slow.txt  acc_stop.txt  controller_stop_case.txt  cv_slow.txt  cv_stop.txt  main.cpp
CV_imu_data/cv_imu_data/: acc_fast.txt  controller_fast_case.txt  controller_stop_case.txt
EKF_Fusion_CV_IMU/: CMakeLists.txt  fusion.cpp  fusion.h  hl_pass_filter.cpp  hl_pass_filter.h  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement.h  readwritedata.cpp  readwritedata.h
EKF_Fusion_CV_IMU/data/: controller_slow_case.txt  fast_output.txt  slow_output_lp0.3.txt  stop_output.txt
EKF_Fuzzy_Fusion/: CMakeLists.txt  clean_imu.cpp  clean_imu.h  fusion.cpp  fusion.h  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement.h  readwritedata.cpp  readwritedata.h
EKF_Fuzzy_Fusion/data/: controller_0426test.txt  controller_stop_case.txt  output.txt
cv_imu_data_seperate/: CMakeLists.txt  main.cpp
cv_imu_data_seperate/cv_imu_data/: acc_slow.txt  cv_fast.txt
imu_high_and_low_pass_filter/: CMakeLists.txt  acc_slow_highpass_0.3.txt  acc_slow_highpass_0.5.txt  acc_slow_highpass_0.8.txt  main.cpp
imu_integral_velocity_mimic_gait/: CMakeLists.txt  main.cpp
imu_integral_velocity_mimic_gait/data/: acc_fast.txt  acc_stop.txt  output.txt
